# Real-Time-Motion

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Detection/: DetectionFunctions.cpp  DetectionFunctions.hpp
Detection/Var/: DetectionValues.cpp  DetectionValues.hpp
Graphics/: GraphicsFunctions.cpp  GraphicsFunctions.hpp
Graphics/Var/: GraphicsValues.cpp  GraphicsValues.hpp
IO/: IOFunctions.cpp  IOFunctions.hpp
IO/Var/: IOValues.cpp  IOValues.hpp
MapKeys/: MapKeys.cpp  MapKeys.hpp
data/: SavedSquaresPositions.txt
